YKI(Backend & Frontend): Updated for ExamType refactor